<resources>
    <string name="app_name">Events</string>
    <string name="title">Finns Bali Day Pass</string>
    <string name="date">01 April 2019 - 31 March 2020</string>
    <string name="time">06:00 AM - 11:00 PM</string>
    <string name="location">Ruko Darmo Galery Blok A3, No 75, Jl. Mayjen Sungkono, Gn. Sari, Dukuh Pakis, Kota SBY, Jawa Timur 60189, Indonesia</string>
    <string name="content">Jakarta, CNN Indonesia -- Komisi Penyiaran Indonesia (KPI) mengatakan akan menerapkan aturan yang tak ketat untuk layanan video streaming, salah satunya adalah Netflix. Pasalnya sesuai dengan undang-undang, KPI memang tidak memiliki wewenang untuk mengawasi layanan over the top (OTT) seperti Netflix.
\nPada Undang-Undang Nomor 32 Tahun 2002 Tentang Penyiaran, KPI masih mengatur lembaga penyiaran konvensional. Sehingga KPI tidak memiliki kedudukan hukum atas pengawasan layanan OTT.
    \n"Tapi buat Lembaga Penyiaran Berbayar (LPB) itu tidak sekeras kepada Lembaga Penyiaran Swasta (LPS) , jadi lebih soft. Karena orang membayar untuk mendapatkan konten. Maka kalau Anda menonton tv berlangganan itu boleh ada ciuman, yang dilarang telanjang itu tidak boleh. Pornografi," ujar Ketua Komisi Penyiaran Indonesia (KPI), Agung Suprio dalam diskusi di kawasan Cikini, Jakarta Pusat, Kamis (16/1).
    \nBerbicara mengenai konten dewasa, Agung mengatakan Netlfix sesungguhnya telah menerapkan fitur parental lock. Agung mengatakan pihaknya telah mewajibkan untuk LPB untuk menerapkan parental lock dalam UU No.32 Tahun 2002 dan Pedoman Perilaku Penyiaran dan Standar Program Siaran (P3SPS).
\n"Menjaga hak-hak tidak menonton tayangan untuk dewasa. Kalau di Netflix sudah ada saya contoh, anak saya 9 tahun dan 8 tahun punya akun sendiri di Netflix, ayahnya beda layanan," kata Agung.
\nWalaupun begitu, Agung mengatakan KPI tetap membutuhkan wewenang untuk mengawasi konten-konten layanan video streaming secara keseluruhan. Ia khawatir nantinya akan ada layanan yang tidak seketat menjaga konten negatif seperti Netflix.
    \n"Kita tidak hanya membicarakan Netflix tapi ke depan ada tv streaming. Ini Komisi I juga sedang merevisi UU Penyiaran tentang digitalisasi," ujarnya.
\nAgung mengatakan KPI sesungguhnya memiliki wewenang untuk mengawasi Netflix karena isinya berkaitan dengan penyiaran. Hanya saja ternyata Netflix ternyata didefinisikan sebagai layanan berbasis telekomunikasi karena diakses melalui internet.
\n"Kalau di luar sudah diintegrasikan. Telekomunikasi dan penyiaran jadi satu, Indonesia masih terpisah dalam konteks ini kita harus kolaborasi antara telekomunikasi, KPI, Kominfo untuk kemudian melihat bagaimana layanan TV streaming Indonesia," katanya. (jnp/eks)
    </string>
    <string name="content_html"><![CDATA[<p><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Jakarta, CNN Indonesia -- Badan Antariksa Amerika (</span><span style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma; color: #ff0000;\"><span style=\"box-sizing: border-box; font-family: CNNSansW04-Medium; -webkit-font-smoothing: antialiased; backface-visibility: hidden;\"><a style=\"box-sizing: border-box; background: transparent; transition: all 200ms linear 0s; -webkit-font-smoothing: antialiased; backface-visibility: hidden; text-decoration-line: none; color: #444444;\" href=\"https://www.cnnindonesia.com/tag/nasa\"><span style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #ff0000;\">NASA</span></a></span></span><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">) mencatat bahwa suhu permukaan global atau bumi pada 2019 merupakan yang terpanas kedua setelah 2016.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Menurut analisis dari The National Oceanic and Atmospheric Administration (NOAA) atau Administrasi Kelautan &amp; Atmosfer Nasional pada 2019, suhu global mencapai 0,98 derajat celsius.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Dilansir situs&nbsp;</span><em style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">NASA</em><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">, suhu global mengalami kenaikan sejak 1880-an rata-rata kurang dari satu derajat celsius.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Dengan menggunakan metode iklim dan analisis statistik data suhu global, para ilmuwan NASA telah menyimpulkan bahwa meningkatnya emisi ke atmosfer karbon dioksida dan gas rumah kaca menyebabkan peningkatan suhu yang cukup tinggi.</span></p>\r\n<p><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">\"Apa yang terjadi [kenaikan suhu global] adalah berkesinambungan, bukan kebetulan karena beberapa fenomena cuaca. Kita tahu bahwa tren ini didorong oleh meningkatnya gas rumah kaca di atmosfer,\" kata Gavin Schmidt, salah satu ilmuwan di Goddard Institute for Space Studies (GISS) NASA.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">NOAA pun mencatat wilayah Kutub Utara lambat laun menghangat sejak 1970 akibat naiknya suhu di atmosfer dan lautan, yang menyebabkan hilangnya massa di Greenland dan Antartika.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Selain itu, ada peningkatan cuaca esktrem seperti gelombang panas, kebakaran hutan, dan curah hujan yang lebat.</span></p>\r\n<p><span style=\"box-sizing: border-box; font-family: CNNSansW04-Medium; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333;\">Perubahan Iklim Jadi Penyebab Kebakaran Hutan di Australia</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Kebakaran hutan dan lahan yang melanda Australia sampai saat ini, setidaknya telah menghancurkan lebih dari 2.000 rumah, 10 juta hektare lahan, dan 28 nyawa terenggut.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Sejumlah peneliti dari universitas memperkirakan lebih dari satu miliar hewan termasuk mamalia, burung, dan reptil terbunuh akibat kobaran api.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Para ilmuwan mengatakan bahwa perubahan iklim memicu kebakaran hutan menjadi mudah meluas dan muncul aksi protes besar-besaran pada Jumat (10/1) lalu di berbagai kota di Australia, yang meminta pemerintah mengambil tindakan untuk menangani perubahan iklim.</span><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><br style=\"box-sizing: border-box; -webkit-font-smoothing: antialiased; backface-visibility: hidden; color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\" /><span style=\"color: #333333; font-family: CNNSansW04-Regular, Arial, Helvetica, Tahoma;\">Sebab, Australia diketahui mengalami tahun terkering dan terpanas pada 2019 dengan rata-rata suhu 41,9 derajat Celcius.</span></p>]]></string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="load">Load</string>
</resources>
