<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="example.com.events.EventActivity">

    <ImageView
        android:id="@+id/image_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:srcCompat="@mipmap/app_post_image" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:padding="8dp"
        android:text="@string/date"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/label_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:padding="8dp"
        android:text="@string/time"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/label_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:padding="8dp"
        android:text="@string/location"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/content"
                android:textColor="#000000"
                android:textSize="12sp" />
                tools:text="@string/content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
