<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="example.com.events.MainActivity">

    <Button
        android:id="@+id/btn_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="load"
        android:text="@string/load"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="next"
        android:text="@string/next" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="prev"
        android:text="@string/previous" />

    <ListView
        android:id="@+id/events_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>